re PR c++/40780 (ICE in gimplify_conversion)

PR c++/40780
	* gimplify.c (gimplify_conversion): Don't change non-conversions into
	VIEW_CONVERT_EXPR.

	* g++.dg/template/ptrmem19.C: New test.

From-SVN: r149741